Hem afegit totes les classes

--- a/SWPROBoat/nbproject/project.properties
+++ b/SWPROBoat/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=swproboat.SWPROBoat
+main.class=cat.iespaucasesnoves.boat.classes.SWPROBoat
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
