Hi ha un parell de metodes d'empresa fets , s'ha afegit llistes que falateven a empresa i s'han afegit els toString de algunes classes.

--- a/SWPROBoat/nbproject/project.properties
+++ b/SWPROBoat/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=cat.iespaucasesnoves.boat.classes.SWPROBoat
+main.class=cat.iespaucasesnoves.boat.classes.Gestio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
